Shorten Feature Added Test

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -156,11 +156,12 @@ nav a:hover {
 
 
 body {
-  background-size: cover;
+/*  background-size: cover;*/
   font-family: 'Dosis', sans-serif;
   color: #e62739;
   margin: 0;
   padding: 0;
+  background: #F5F5F5 url('../img/bg.png') repeat left top;
 }
 
 .text {
