--- a/public/css/index.css
+++ b/public/css/index.css
@@ -156,12 +156,11 @@ nav a:hover {
 
 
 body {
-/*  background-size: cover;*/
+  background-size: cover;
   font-family: 'Dosis', sans-serif;
   color: #e62739;
   margin: 0;
   padding: 0;
-  background: #F5F5F5 url('../img/bg.png') repeat left top;
 }
 
 .text {
@@ -319,14 +318,14 @@ footer > a {
     border-radius: 5px;
     width: 80%;
     padding: 0;
-    
+
   }
   .url-button {
   height: 40px;
   width: 65px;
   display: block;
   border-radius: 5px;
-  width: 80%; 
+  width: 80%;
   margin: 0;
   margin-left: 30px;
   }
