--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,6 +161,7 @@ body {
   color: #e62739;
   margin: 0;
   padding: 0;
+  /*background: #F5F5F5 url('../img/bg.png') repeat left top;*/
 }
 
 .text {
