--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,6 +4,7 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    min-height: 100%;
 }
 
 ::-moz-selection {
@@ -161,7 +162,7 @@ body {
   color: #e62739;
   margin: 0;
   padding: 0;
-  
+
 }
 
 .text {
